# be-graph-local-py

./: README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: design.yml  external-defect.yml  iteration.yml  repo.yml
.github/ISSUE_TEMPLATE/: 100_task-story.yml  200_task-feature.yml  300_task-epic.yml  400_task-theme.yml  500_defect-back-end.yml  800_defect-integration.yml  900_defect-generic.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: documentation.md  implementation.md  translation.md
be_graph_local_py/cli/: __init__.py  arguments.py
be_graph_local_py/rdf/: __init__.py  rdf.py
be_graph_local_py/utils/: argparse_examples.py  rdflib_examples.py
doc/en/: README.md
tests/: test_arguments.py
tests/data/: doap.n3  doap.rdf
