[tool.poetry]
name = "be-graph-local-py"
version = "0.1.0"
description = "Creation and editing of local graph files for publication and automated discovery."
authors = ["natebass <nw3455@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
