[tool.poetry]
name = "be-graph-local-py"
version = "0.1.0"
description = "Creation and editing of local graph files for publication and automated discovery."
authors = ["natebass <nw3455@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
